<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/facebookLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/klavikabold"
        android:text="@string/facebook"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/facebookLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_text_up"
        android:hint="@string/username_hint"
        android:paddingStart="30dp" />

    <View
        android:id="@+id/separatingLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="@id/separatingLine"
        app:layout_constraintEnd_toEndOf="@id/separatingLine"
        app:layout_constraintTop_toBottomOf="@id/separatingLine"
        android:background="@drawable/edit_text_down"
        android:hint="@string/password_hint"
        android:paddingStart="30dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/login_button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up_for_facebook"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signUpTxt"
        app:layout_constraintEnd_toEndOf="@id/signUpTxt"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/help_centre"
        android:textColor="@color/white"
        android:textSize="17sp" />


</androidx.constraintlayout.widget.ConstraintLayout>